# selenium-mcp-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: mcp.json  selenium_mcp_server.py
src/selenium_mcp/: __init__.py
tests/: test_mcp_client.py
